--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
   <section class="ds-email-section">
     <div class="container">
-      <h2>I'm available for work</h2>
+      <h2>I'm available for more projects</h2>
       <a href="mailto:bridgescaila@gmail.com">bridgescaila@gmail.com</a>
     </div>
   </section>
