--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <!-- Main CSS -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
   <title>Caila Bridges Portfolio</title>
 </head>
 
@@ -52,7 +52,7 @@
         </div>
         <div class="col-12 col-sm-12  col-md-6  col-lg-5  col-xl-5  col-xxl-5">
           <figure>
-            <img src="assets/images/banner-image.jpg" class="ds-image-shadow">
+            <img src="banner-image.jpg" class="ds-image-shadow">
             <figcaption>Caila Bridges</figcaption>
           </figure>
         </div>
