--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="col-12 col-sm-12  col-md-6  col-lg-5  col-xl-5  col-xxl-5">
           <figure>
-            <img src="banner-image.jpg" class="ds-image-shadow">
+            <img src="banner-image.JPG" class="ds-image-shadow">
             <figcaption>Caila Bridges</figcaption>
           </figure>
         </div>
