--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <figure>
             <a href="project1.html" class="ds-link-button"><i class="ri-external-link-line"></i></a>
             <a href="project1.html"> <!-- Modified this line -->
-              <img src="assets/images/projects-1.png" class="ds-image-shadow transition">
+              <img src="projects-1.png" class="ds-image-shadow transition">
             </a>
           </figure>
           <section>
@@ -104,7 +104,7 @@
           <figure>
             <a href="project2.html" class="ds-link-button"><i class="ri-external-link-line"></i></a>
             <a href="project2.html"> <!-- Modified this line -->
-              <img src="assets/images/projects-2.png" class="ds-image-shadow transition">
+              <img src="projects-2.png" class="ds-image-shadow transition">
             </a>
           </figure>
           <section>
@@ -132,11 +132,11 @@
   <script>
     // Array of image URLs
     const testimonialImages = [
-      'assets/images/projects-1.png',
-      'assets/images/nn1.png',
-      'assets/images/projects-2.png',
-      'assets/images/practices1.png',
-      'assets/images/process2.png',
+      'projects-1.png',
+      'nn1.png',
+      'projects-2.png',
+      'practices1.png',
+      'process2.png',
       // Add more image URLs as needed
     ];
 
