--- a/index.html
+++ b/index.html
@@ -127,42 +127,29 @@
   </section>
   <!-- testimonials -->
 
-  <!-- Your existing HTML content above this line -->
+  // Array of image URLs
+const testimonialImages = [
+  'projects-1.png',
+  'nn1.png',
+  'projects-2.png',
+  'practices1.png',
+  'process-2.png',
+  // Add more image URLs as needed
+];
 
-  <script>
-    // Array of image URLs
-    const testimonialImages = [
-      'projects-1.png',
-      'nn1.png',
-      'projects-2.png',
-      'practices1.png',
-      'process2.png',
-      // Add more image URLs as needed
-    ];
+// Get the testimonials-slider element
+const testimonialsSlider = document.getElementById('testimonials-slider');
 
-    // Get the testimonials-slider element
-    const testimonialsSlider = document.getElementById('testimonials-slider');
+// Loop through the image URLs and create image elements
+testimonialImages.forEach(imageUrl => {
+  // Create an img element
+  const imageElement = document.createElement('img');
+  imageElement.src = imageUrl;
+  imageElement.alt = 'Testimonial Image';
 
-    // Loop through the image URLs and create image elements
-    testimonialImages.forEach(imageUrl => {
-      // Create a new div for each image
-      const testimonialLoop = document.createElement('div');
-      testimonialLoop.classList.add('ds-testimonials-loop');
-
-      // Create an img element
-      const imageElement = document.createElement('img');
-      imageElement.src = imageUrl;
-      imageElement.alt = 'Testimonial Image';
-
-      // Append the image to the div
-      testimonialLoop.appendChild(imageElement);
-
-      // Append the div to the testimonials-slider
-      testimonialsSlider.appendChild(testimonialLoop);
-    });
-  </script>
-
-  <!-- Your existing JavaScript and closing body and html tags below this line -->
+  // Append the image to the testimonials-slider
+  testimonialsSlider.appendChild(imageElement);
+});
 
   <section class="ds-email-section">
     <div class="container">
