--- a/index.html
+++ b/index.html
@@ -125,31 +125,7 @@
       <div class="ds-testimonials-slider" id="testimonials-slider"></div>
     </div>
   </section>
-  <!-- testimonials -->
-
-  // Array of image URLs
-const testimonialImages = [
-  'projects-1.png',
-  'nn1.png',
-  'projects-2.png',
-  'practices1.png',
-  'process-2.png',
-  // Add more image URLs as needed
-];
-
-// Get the testimonials-slider element
-const testimonialsSlider = document.getElementById('testimonials-slider');
-
-// Loop through the image URLs and create image elements
-testimonialImages.forEach(imageUrl => {
-  // Create an img element
-  const imageElement = document.createElement('img');
-  imageElement.src = imageUrl;
-  imageElement.alt = 'Testimonial Image';
-
-  // Append the image to the testimonials-slider
-  testimonialsSlider.appendChild(imageElement);
-});
+  <!-- Project Showcase -->
 
   <section class="ds-email-section">
     <div class="container">
