--- a/project1.html
+++ b/project1.html
@@ -21,7 +21,7 @@
 
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <!-- Main CSS -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
     <title>Caila Bridges Portfolio</title>
 </head>
 
@@ -82,13 +82,13 @@
             </div>
             <div class="row ds-process-images">
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                    <img src="assets/images/process-1.png" class="" alt="Process Step 1">
+                    <img src="process-1.png" class="" alt="Process Step 1">
                 </div>
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                    <img src="assets/images/process-2.png" class="" alt="Process Step 2">
+                    <img src="process-2.png" class="" alt="Process Step 2">
                 </div>
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                    <img src="assets/images/process-3.png" class="" alt="Process Step 3">
+                    <img src="process-3.png" class="" alt="Process Step 3">
                 </div>
             </div>
         </div>
@@ -117,8 +117,8 @@
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <div class="ds-image-container">
-                        <img src="assets/images/nav1.png" class="img-fluid" alt="Image 1">
-                        <img src="assets/images/nav2.png" class="img-fluid" alt="Image 2">
+                        <img src="nav1.png" class="img-fluid" alt="Image 1">
+                        <img src="nav2.png" class="img-fluid" alt="Image 2">
                     </div>
                 </div>
             </div>
@@ -205,13 +205,13 @@
         </div>
         <div class="row ds-extra-images img">
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                <img src="assets/images/timeline1.png" class="" alt="Process Step 1">
+                <img src="timeline1.png" class="" alt="Process Step 1">
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                <img src="assets/images/practices1.png" class="" alt="Process Step 3">
+                <img src="practices1.png" class="" alt="Process Step 3">
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                <img src="assets/images/practices2.png" class="" alt="Process Step 3">
+                <img src="practices2.png" class="" alt="Process Step 3">
             </div>
         </div>
         </div>
@@ -239,7 +239,7 @@
     -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
-    <script src="assets/js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
