--- a/index.html
+++ b/index.html
@@ -168,12 +168,11 @@ projectImages.forEach(imageUrl => {
 
 <!-- Your existing JavaScript and closing body and html tags below this line -->
 
-
   
 
   <section class="ds-email-section">
     <div class="container">
-      <h2>I'm available for more projects</h2>
+      <h2>I'm available for more projects!</h2>
       <a href="mailto:bridgescaila@gmail.com">bridgescaila@gmail.com</a>
     </div>
   </section>
