--- a/index.html
+++ b/index.html
@@ -129,54 +129,12 @@
 </section>
 <!-- Project Showcase Section -->
 
-  <script>
-  const projectImages = [
-    'projects-1.png',
-    'nn1.png',
-    'projects-2.png',
-    'practices1.png',
-    'process-2.png',
-    // Add more image URLs as needed
-  ];
+<!-- Your existing HTML content above this line -->
 
-  const projectShowcaseSlider = document.getElementById('project-showcase-slider');
-  let currentIndex = 0;
+<script src="script.js"></script>
 
-  function updateSlider() {
-    projectShowcaseSlider.style.transform = `translateX(${-currentIndex * 100}%)`;
-  }
+<!-- Your existing JavaScript and closing body and html tags below this line -->
 
-  function nextSlide() {
-    currentIndex = (currentIndex + 1) % projectImages.length;
-    updateSlider();
-  }
-
-  function prevSlide() {
-    currentIndex = (currentIndex - 1 + projectImages.length) % projectImages.length;
-    updateSlider();
-  }
-
-  setInterval(nextSlide, 3000); // Change slide every 3 seconds (3000 milliseconds)
-
-  // Manual navigation using arrow keys
-  document.addEventListener('keydown', (event) => {
-    if (event.key === 'ArrowRight') {
-      nextSlide();
-    } else if (event.key === 'ArrowLeft') {
-      prevSlide();
-    }
-  });
-
-  projectImages.forEach((imageUrl) => {
-    const projectLoop = document.createElement('div');
-    projectLoop.classList.add('ds-testimonials-loop');
-    const imageElement = document.createElement('img');
-    imageElement.src = imageUrl;
-    imageElement.alt = 'Project Image';
-    projectLoop.appendChild(imageElement);
-    projectShowcaseSlider.appendChild(projectLoop);
-  });
-</script>
 
 
   <section class="ds-email-section">
