--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
-  <script src="main.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
