--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 
  <!-- Project Showcase Section -->
-<section class="ds-testimonials-section">
+<section class="ds-project-showcase-section">
   <div class="container">
     <h2><span>Project Showcase</span></h2>
     </div>
@@ -158,7 +158,7 @@
     -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
-  <script src="script.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
