--- a/index.html
+++ b/index.html
@@ -118,14 +118,36 @@
   <!-- projects -->
 
 
- <!-- Project Showcase Section -->
+<!-- Project Showcase Section -->
 <section class="ds-project-showcase-section">
   <div class="container">
     <h2><span>Project Showcase</span></h2>
+    <div class="ds-project-showcase-slider">
+      <!-- Slide 1: Image 1 -->
+      <div>
+        <img src="practices2.png" alt="Image 1">
+      </div>
+      <!-- Slide 2: Image 2 -->
+      <div>
+        <img src="nn1.png" alt="Image 2">
+      </div>
+      <!-- Slide 3: Image 3 -->
+      <div>
+        <img src="process-3.png" alt="Image 3">
+      </div>
+      <!-- Slide 4: Image 4 -->
+      <div>
+        <img src="nav2.png" alt="Image 4">
+      </div>
+      <!-- Slide 5: Image 5 -->
+      <div>
+        <img src="timeline1.png" alt="Image 5">
+      </div>
     </div>
   </div>
 </section>
 <!-- Project Showcase Section -->
+
 
 
 
