--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
             I’m a web devel­op­er, aspiring react ninja and vegan foodie from Raleigh, NC.
           </h1>
           <ul class="ds-social">
-            <li><a href="#" target="_blanck"><i class="ri-github-fill"></i></a></li>
-            <li><a href="#" target="_blanck"><i class="ri-stack-overflow-line"></i></a></li>
-            <li><a href="#" target="_blanck"><i class="ri-linkedin-fill"></i></a></li>
+            <li><a href="https://github.com/cailabridges" target="_blanck"><i class="ri-github-fill"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/caila-b-4b1362135/" target="_blanck"><i class="ri-linkedin-fill"></i></a></li>
           </ul>
         </div>
         <div class="col-12 col-sm-12  col-md-6  col-lg-5  col-xl-5  col-xxl-5">
