--- a/project1.html
+++ b/project1.html
@@ -44,14 +44,15 @@
                     <p>
                     <h2>Living Histories: Kefalonia, Greece</h2>
                     </p>
-                    <p>The Living Histories initiative, led by North Carolina State University, is a continuous,
-                        multi-year endeavor aimed at capturing the history and traditions of the residents in
-                        Kefalonia,
-                        Greece. </p>
-                    <p>Through this project, I enhanced my skills in web development and learned effective
-                        techniques for
-                        presenting information to diverse audiences with varying cultural backgrounds and languages.
-                    </p>
+                    <p>Living Histories is a multi-year multidisciplinary project spearheaded by Prof. Scott Townsend and based in Kefalonia (Κεφαλονια), the sixth largest Greek island.
+                        The focus of Living Histories is the documentation of the experiences, practices, values, and history of Kefalonia and its people.
+                        I and eight other students in the 2022 program cohort worked collaboratively to build and populate a website for all of the research
+                        done to date, including interviews, photography, cultural practices, and social values. </p>
+                    <p>During my time in Kefalonia, I had the opportunity to be immersed within the island's culture, taste its traditional foods, and form relationships with it's people.
+                        It was a pleasure to be involved in building a web app that contained a manifestation of Kefalonia's hisotry and practices. 
+                        I sharpened my technical skills with HTML, CSS and Javascript during its construction. 
+                        I enhanced my ability to manage time, team collaboration and research content to bring
+                        the porject to completeion within the five week program.  </p>
                     <p>
                     <h5>Technologies:</h5> HTML, CSS, Adobe CC
                     </p>
