Update file name

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             front-end/back-end web,
             graphic design and software development. My tech stack includes: html/css, javascript, node.js, react and
             mongoDB.</p>
-          <a href="https://github.com/cailabridges/cailabridges.github.io/blob/main/CailaBridgesResume_20231003.ai.pdf"
+          <a href="https://github.com/cailabridges/cailabridges.github.io/blob/main/CailaBridgesResume_20231003.pdf"
             class="ds-download-button" download>
             Download Resume <i class="ri-download-line"></i>
           </a>
