--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
             specialize in building
             powerful web applications specific to the unique and dynamic needs of my clients. I have done work in
             front-end/back-end web,
-            graphic design and software development. My tech stack includes: html/css, javascript, node.js, react and
-            mongoDB.</p>
+            graphic design and software development. My tech stack includes: html/css, javascript, python, react and node.js. </p>
           <a href="https://github.com/cailabridges/cailabridges.github.io/blob/main/CailaBridgesResume_20231003.pdf"
             class="ds-download-button" download>
             Download Resume <i class="ri-download-line"></i>
@@ -103,12 +102,12 @@
           <figure>
             <a href="project2.html" class="ds-link-button"><i class="ri-external-link-line"></i></a>
             <a href="project2.html"> <!-- Modified this line -->
-              <img src="projects-2.png" class="ds-image-shadow transition">
+              <img src="projects-2.1.jpg" class="ds-image-shadow transition">
             </a>
           </figure>
           <section>
-            <h3>Neatly Nestled</h3>
-            <span>Web app for professional home organizer</span>
+            <h3>Mamba Game</h3>
+            <span>Interactive game for fun & learning</span>
           </section>
         </div>
       </div>
