--- a/project2.html
+++ b/project2.html
@@ -1,1 +1,220 @@
-## Project1
+<!doctype html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Google Fots -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <!-- Remixicon Icon -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <!-- Remixicon Icon -->
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <!-- Main CSS -->
+    <link href="main.css" rel="stylesheet">
+    <title>Caila Bridges Portfolio</title>
+</head>
+
+<body>
+
+    <!-- header -->
+    <header class="ds-header">
+        <div class="container">
+            <div class="ds-logo">
+                <a href="index.html">Caila Bridges</a>
+            </div>
+        </div>
+    </header>
+    <!-- header -->
+    <!-- Project Section 1: Text and Video -->
+    <section class="ds-text-video-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <p>
+                    <h2>Mamba Game</h2>
+                    </p>
+                    <p>The Mamba game offers a unique African twist on the classic snake game, immersing players in the
+                        vibrant ecosystem of Africa. As players use their keys to maneuver the hungry snake to find its
+                        prey, they not only enjoy the thrill of the game but also gain valuable insights about the
+                        natural world. The game integrates educational elements, such as intriguing fun facts about
+                        snakes and the African green mamba, to become an engaging learning platform for young and old
+                        alike. </p>
+                    <p>I created the Mamba game using Python, harnessing the power of PIL libraries for smooth image
+                        processing. The code was structured using Python's functions and classes, ensuring a modular and
+                        scalable design. By integrating fun facts seamlessly, the Mamba Game showcases Python's dynamic
+                        capabilities,
+                        offering players an engaging and educational experience. </p>
+                    <p>
+                    <h5>Technologies:</h5> Python
+                    </p>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/u3x1Lev1qz8?si=uold6RF65V5ww3Oo"
+                        frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Project Section 1: Text and Video -->
+
+    <!-- Project Section 2: Process -->
+    <section class="ds-process-section">
+        <div class="container">
+            <h2><span>The Process</span></h2>
+            <div class="row ds-process-content">
+                <div class="col-12">
+                    <p>In crafting the Mamba game, I began by designing the game mechanics and visuals, incorporating
+                        Python's object-oriented approach. Leveraging the PIL (Pillow) library, allowed me to manage and
+                        display images, enhancing the game's visual appeal. Using Python's classes, I created distinct
+                        objects for the
+                        snake, food, and game elements, ensuring a modular structure for easy maintenance and updates.
+                    </p>
+
+                </div>
+                <div class="row ds-process-images">
+                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                        <img src="project 2 images/mgcode1.png" class="" alt="Process Step 1">
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                        <img src="project 2 images/mgcode2.png" class="" alt="Process Step 2">
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                        <img src="project 2 images/mgcode3.png" class="" alt="Process Step 3">
+                    </div>
+                </div>
+            </div>
+    </section>
+    <!-- Project Section 2: Process -->
+
+    <!-- Black Background Section with Right-Aligned Text and Images -->
+    <section class="ds-black-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <div class="ds-text-content">
+                        <h2>Gameplay</h2>
+                        <p>The game's core features included dynamic snake movement controlled by arrow keys, collision
+                            detection to handle interactions between the snake and food, and a responsive game over
+                            mechanism triggered by collisions or boundary breaches. Python's event-driven programming
+                            facilitated smooth gameplay, allowing players to navigate the snake seamlessly.</p>
+
+                        <p>To add an educational twist, fun facts about snakes, particularly the eastern African
+                            green mambas, demonstrate Python's text manipulation capabilities. String
+                            manipulation functions enabled me to present these facts at the end of the game, enriching
+                            players' knowledge in an engaging manner.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <div class="ds-image-container mx-auto" style="margin-right: -20px;">
+                        <!-- Added custom margin-right style -->
+                        <img src="project 2 images/mambagame4.png" class="img-fluid" alt="Image 1">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End of Black Background Section -->
+
+    <!-- Code Examples Section -->
+    <section class="ds-code-examples-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <div class="ds-code-box">
+                        <h2>Example 1: Python</h2>
+                        <p>Here's a Python code snippet for the Mamba game:</p>
+                        <pre><code class="python">
+    def next_turn(snake, food):
+    global score
+    x, y = snake.coordinates[0]
+
+    if direction == "up":
+        y -= SPACE_SIZE
+    elif direction == "down":
+        y += SPACE_SIZE
+    elif direction == "left":
+        x -= SPACE_SIZE
+    elif direction == "right":
+        x += SPACE_SIZE
+
+    snake.coordinates.insert(0, [x, y])
+    snake.update_head(direction)
+
+    square = snake.canvas.create_image(
+        x, y, anchor=NW, image=snake_head, tags="snake")
+    snake.squares.insert(0, square)
+
+    if x == food.coordinates[0] and y == food.coordinates[1]:
+        global score
+        score += 1
+        label.config(text="Score : {}".format(score))
+        canvas.delete("food")
+        food = Food(canvas, snake.coordinates)
+    else:
+        del snake.coordinates[-1]
+        canvas.delete(snake.squares[-1])
+        del snake.squares[-1]
+        snake.update_tail()
+
+    if check_collisions(snake):
+        game_over()
+        return
+
+    window.after(SPEED, next_turn, snake, food)
+                        </code></pre>
+                        <p>This code snippet provides game logic for movement, collision detection, and score tracking.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <div class="ds-code-box">
+                        <h2>Example 2: Python</h2>
+                        <p>Here's another Python code snippet with a function checking for collisions:</p>
+                        <pre><code class="HTML">
+    def check_collisions(snake):
+    x, y = snake.coordinates[0]
+    if x < 0 or x >= GAME_WIDTH or y < 0 or y >= GAME_HEIGHT - (SPACE_SIZE*2):
+        print("GAME OVER")
+        return True
+
+    for body_part in snake.coordinates[1:]:
+        if x == body_part[0] and y == body_part[1]:
+            return True
+    return False
+                    </code></pre>
+                        <p>This code snippet checks if the snake collides with the game boundaries or its own body,
+                            triggering the game over state if a collision is detected.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Code Examples Section -->
+
+    <section class="ds-process-section">
+        <div class="container">
+        </div>
+        <div class="row ds-extra-images img">
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                <img src="project 2 images/mambagame1.png" class="" alt="Process Step 1">
+            </div>
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                <img src="project 2 images/mambagame3.png" class="" alt="Process Step 3">
+            </div>
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                <img src="project 2 images/mambagame2.png" class="" alt="Process Step 3">
+            </div>
+        </div>
+        </div>
+    </section>
