--- a/index.html
+++ b/index.html
@@ -81,39 +81,40 @@
       </div>
     </div>
   </section>
-  <!-- projects -->
-  <section class="ds-projects-section">
-    <div class="container">
-      <h2><span>projects</span>Check out a few of my recent projects:</h2>
-      <div class="row ds-projects-listing-section">
-        <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4 ds-projects-loop">
-          <figure>
-            <a href="project1.html" class="ds-link-button"><i class="ri-external-link-line"></i></a>
-            <a href="project1.html"> <!-- Modified this line -->
-              <img src="projects-1.png" class="ds-image-shadow transition">
-            </a>
-          </figure>
-          <section>
-            <h3>Living Histories: Kefalonia, Greece</h3>
-            <span>Web app for oral histories</span>
-          </section>
-        </div>
-        <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4 ds-projects-loop">
-          <figure>
-            <a href="project2.html" class="ds-link-button"><i class="ri-external-link-line"></i></a>
-            <a href="project2.html"> <!-- Modified this line -->
-              <img src="projects-3.jpg" class="ds-image-shadow transition">
-            </a>
-          </figure>
-          <section>
-            <h3>Mamba Game</h3>
-            <span>Interactive game for fun & learning</span>
-          </section>
-        </div>
+ <!-- projects -->
+<section class="ds-projects-section">
+  <div class="container">
+    <h2><span>projects</span>Check out a few of my recent projects:</h2>
+    <div class="row ds-projects-listing-section">
+      <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4 ds-projects-loop d-flex align-items-center">
+        <figure>
+          <a href="project1.html" class="ds-link-button"><i class="ri-external-link-line"></i></a>
+          <a href="project1.html">
+            <img src="projects-1.png" class="ds-image-shadow transition">
+          </a>
+        </figure>
+        <section>
+          <h3>Living Histories: Kefalonia, Greece</h3>
+          <span>Web app for oral histories</span>
+        </section>
+      </div>
+      <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4 ds-projects-loop d-flex align-items-center">
+        <figure>
+          <a href="project2.html" class="ds-link-button"><i class="ri-external-link-line"></i></a>
+          <a href="project2.html">
+            <img src="projects-3.jpg" class="ds-image-shadow transition">
+          </a>
+        </figure>
+        <section>
+          <h3>Mamba Game</h3>
+          <span>Interactive game for fun & learning</span>
+        </section>
       </div>
     </div>
-  </section>
-  <!-- projects -->
+  </div>
+</section>
+<!-- projects -->
+
 
 
 <!-- Project Showcase Section -->
@@ -127,7 +128,7 @@
       </div>
       <!-- Slide 2: Image 2 -->
       <div>
-        <img src="nn1.png" alt="Image 2">
+        <img src="project 2 images/mambagame1.png" alt="Image 2">
       </div>
       <!-- Slide 3: Image 3 -->
       <div>
@@ -135,11 +136,19 @@
       </div>
       <!-- Slide 4: Image 4 -->
       <div>
-        <img src="nav2.png" alt="Image 4">
+        <img src="project 2 images/mambagame4.png" alt="Image 4">
       </div>
       <!-- Slide 5: Image 5 -->
       <div>
         <img src="timeline1.png" alt="Image 5">
+      </div>
+        <!-- Slide 6: Image 6 -->
+      <div>
+        <img src="nav2.png" alt="Image 6">
+      </div>
+      <!-- Slide 7: Image 7 -->
+      <div>
+        <img src="nn1.png" alt="Image 7">
       </div>
     </div>
   </div>
