--- a/index.html
+++ b/index.html
@@ -81,39 +81,46 @@
       </div>
     </div>
   </section>
- <!-- projects -->
+
+
+  <!-- projects -->
 <section class="ds-projects-section">
   <div class="container">
-    <h2><span>projects</span>Check out a few of my recent projects:</h2>
+    <h2 class="display-4"><span>Projects</span> Check out a few of my recent projects:</h2>
     <div class="row ds-projects-listing-section">
-      <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4 ds-projects-loop d-flex align-items-center">
-        <figure>
-          <a href="project1.html" class="ds-link-button"><i class="ri-external-link-line"></i></a>
-          <a href="project1.html">
-            <img src="projects-1.png" class="ds-image-shadow transition">
-          </a>
-        </figure>
-        <section>
-          <h3>Living Histories: Kefalonia, Greece</h3>
-          <span>Web app for oral histories</span>
-        </section>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4 ds-projects-loop mb-4">
+        <div class="d-flex flex-column align-items-center">
+          <figure class="mb-3">
+            <a href="project1.html" class="ds-link-button"><i class="ri-external-link-line"></i></a>
+            <a href="project1.html">
+              <img src="projects-1.png" class="ds-image-shadow transition img-fluid rounded" alt="Project 1">
+            </a>
+          </figure>
+          <section class="text-center">
+            <h3 class="h4">Living Histories: Kefalonia, Greece</h3>
+            <span class="h6">Web app for oral histories</span>
+          </section>
+        </div>
       </div>
-      <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4 ds-projects-loop d-flex align-items-center">
-        <figure>
-          <a href="project2.html" class="ds-link-button"><i class="ri-external-link-line"></i></a>
-          <a href="project2.html">
-            <img src="projects-3.jpg" class="ds-image-shadow transition">
-          </a>
-        </figure>
-        <section>
-          <h3>Mamba Game</h3>
-          <span>Interactive game for fun & learning</span>
-        </section>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4 ds-projects-loop mb-4">
+        <div class="d-flex flex-column align-items-center">
+          <figure class="mb-3">
+            <a href="project2.html" class="ds-link-button"><i class="ri-external-link-line"></i></a>
+            <a href="project2.html">
+              <img src="projects-3.jpg" class="ds-image-shadow transition img-fluid rounded" alt="Project 2">
+            </a>
+          </figure>
+          <section class="text-center">
+            <h3 class="h4">Mamba Game</h3>
+            <span class="h6">Interactive game for fun & learning</span>
+          </section>
+        </div>
       </div>
     </div>
   </div>
 </section>
 <!-- projects -->
+
 
 
 
