--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="row">
         <div class="col-12 col-sm-12  col-md-6  col-lg-7  col-xl-7  col-xxl-7 ds-banner-left">
           <h1 class="ds-banner-hed">
-            I’m a web devel­op­er, aspiring react ninja and vegan foodie from Raleigh, NC.
+            I’m a Software devel­op­er, aspiring react ninja and vegan foodie from Raleigh, NC.
           </h1>
           <ul class="ds-social">
             <li><a href="https://github.com/cailabridges" target="_blanck"><i class="ri-github-fill"></i></a></li>
