--- a/index.html
+++ b/index.html
@@ -83,11 +83,25 @@
   </section>
 
 
-  <!-- projects -->
+<!-- projects -->
 <section class="ds-projects-section">
   <div class="container">
     <h2 class="display-4"><span>Projects</span> Check out a few of my recent projects:</h2>
     <div class="row ds-projects-listing-section">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4 ds-projects-loop mb-4">
+        <div class="d-flex flex-column align-items-center">
+          <figure class="mb-3">
+            <a href="project3.html" class="ds-link-button"><i class="ri-external-link-line"></i></a>
+            <a href="project3.html">
+              <img src="projects-3.png" class="ds-image-shadow transition img-fluid rounded" alt="Project 3">
+            </a>
+          </figure>
+          <section class="text-center">
+            <h3 class="h4">Soulithic</h3>
+            <span class="h6">Blogging web application</span>
+          </section>
+        </div>
+      </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4 ds-projects-loop mb-4">
         <div class="d-flex flex-column align-items-center">
           <figure class="mb-3">
@@ -120,6 +134,7 @@
   </div>
 </section>
 <!-- projects -->
+
 
 
 
