--- a/project3.html
+++ b/project3.html
@@ -109,8 +109,8 @@
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <div class="ds-image-container">
-                        <img src="nav1.png" class="img-fluid" alt="Image 1">
-                        <img src="nav2.png" class="img-fluid" alt="Image 2">
+                        <img src="project 3 images/tech.png" class="img-fluid" alt="Image 1">
+                        <img src="project 3 images/single.png" class="img-fluid" alt="Image 2">
                     </div>
                 </div>
             </div>
@@ -156,35 +156,35 @@
                         <p>Here's a HTML/CSS code snippet that showcases the navigation between the Oral Histories and
                             Practices pages:</p>
                         <pre><code class="HTML">
-                            &lt;head&gt;
-                            &lt;/head&gt;
-                            &lt;body&gt;
-                            &lt;div id="Oral_Histories"&gt;
-                                &lt;svg class="Rectangle_72"&gt;
-                                    &lt;rect id="Rectangle_72" rx="0" ry="0" x="0" y="0" width="1000" height="974"&gt;
-                                    &lt;/rect&gt;
-                                &lt;/svg&gt;
-                                &lt;svg class="NAV"&gt;
-                                    &lt;rect id="NAV" rx="0" ry="0" x="0" y="0" width="1000" height="100"&gt;
-                                    &lt;/rect&gt;
-                                &lt;/svg&gt;
-                                
-                                &lt;a href="Practices_Page.html"&gt;
-                                &lt;div id="Practices_Nav" class="Practices_Nav"&gt;
-                                    &lt;div id="Text"&gt;
-                                        &lt;span&gt;Πρακτικές&lt;/span&gt;
-                                    &lt;/div&gt;
-                                    &lt;div id="Practices"&gt;
-                                        &lt;span&gt;Practices&lt;/span&gt;
-                                    &lt;/div&gt;
-                                    &lt;svg class="Rectangle_3"&gt;
-                                        &lt;rect id="Rectangle_3" rx="0" ry="0" x="0" y="0" width="24.166" height="1.027"&gt;
-                                        &lt;/rect&gt;
-                                    &lt;/svg&gt;
-                                &lt;/div&gt;
-                                &lt;/a&gt;
-                            &lt;/div&gt;
-                            &lt;/body&gt;
+                           export const addPost = (req, res) => {
+  const token = req.cookies.access_token;
+
+  if (!token) {
+    return res.status(401).json("Not authenticated!");
+  }
+
+  jwt.verify(token, "jwtkey", (err, userInfo) => {
+    if (err) return res.status(403).json("Token is not valid!");
+
+    const q =
+      "INSERT INTO posts (title, `desc`, img, cat, date, uid) VALUES (?, ?, ?, ?, ?, ?)";
+    const values = [
+      req.body.title,
+      req.body.desc,
+      req.body.img,
+      req.body.cat,
+      req.body.date,
+      userInfo.id,
+    ];
+
+    db.query(q, values, (err, data) => {
+      if (err) return res.status(500).json(err);
+
+      return res.json("Post has been created.");
+    });
+  });
+};
+
                     </code></pre>
                         <p>This code includes HTML and SVG elements for the webpage, including rectangles and navigation
                             links</p>
@@ -200,13 +200,13 @@
         </div>
         <div class="row ds-extra-images img">
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                <img src="timeline1.png" class="" alt="Process Step 1">
+                <img src="project 3 images/edit-1.png" class="" alt="Process Step 1">
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                <img src="practices1.png" class="" alt="Process Step 3">
+                <img src="project 3 images/register.png" class="" alt="Process Step 3">
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                <img src="practices2.png" class="" alt="Process Step 3">
+                <img src="project 3 images/soulithic.png" class="" alt="Process Step 3">
             </div>
         </div>
         </div>
