--- a/project3.html
+++ b/project3.html
@@ -110,7 +110,7 @@
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <div class="ds-image-container">
                         <img src="project 3 images/tech.png" class="img-fluid" alt="Image 1">
-                        <img src="project 3 images/single.png" class="img-fluid" alt="Image 2">
+                        
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                 <img src="project 3 images/edit-1.png" class="" alt="Process Step 1">
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                <img src="project 3 images/register.png" class="" alt="Process Step 3">
+                <img src="project 3 images/single.png" class="" alt="Process Step 3">
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
                 <img src="project 3 images/soulithic.png" class="" alt="Process Step 3">
