--- a/index.html
+++ b/index.html
@@ -64,14 +64,10 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-sm-12  col-md-6  col-lg-6  col-xl-6  col-xxl-6">
-          <h2>I'm a passionate tech enthusiast and web developer breaking barriers and codes one line at a time. </h2>
+          <h2>I'm a passionate tech enthusiast and software developer breaking barriers and codes one line at a time. </h2>
         </div>
         <div class="col-12 col-sm-12  col-md-6  col-lg-6  col-xl-6  col-xxl-6">
-          <p> I'm dedicated to crafting beautiful and functional web applications that elevate the user experience. I
-            specialize in building
-            powerful web applications specific to the unique and dynamic needs of my clients. I have done work in
-            front-end/back-end web,
-            graphic design and software development. My tech stack includes: html/css, javascript, python, react and node.js. </p>
+          <p>I focus on crafting intricate web applications that seamlessly blend form and function to deliver exceptional user experiences. My expertise spans both front-end and back-end development, enabling me to create tailored solutions that precisely meet the evolving needs of clients. Proficient in front-end design, back-end architecture, and graphic design, I integrate user-centric designs with advanced functionalities. I'm dedicated to transforming complex requirements into innovative digital solutions, employing a mix of technical prowess and creative intuition to ensure project success. My tech stack includes: html/css, javascript, python, react, node.js, mysql. </p>
           <a href="https://github.com/cailabridges/cailabridges.github.io/blob/main/CailaBridgesResume_20231022.pdf"
             class="ds-download-button" download>
             Download Resume <i class="ri-download-line"></i>
