--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="ds-project-showcase-slider">
       <!-- Slide 1: Image 1 -->
       <div>
-        <img src="practices2.png" alt="Image 1">
+        <img src="project 3 images/tech.png" alt="Image 1">
       </div>
       <!-- Slide 2: Image 2 -->
       <div>
@@ -150,7 +150,7 @@
       </div>
       <!-- Slide 3: Image 3 -->
       <div>
-        <img src="process-3.png" alt="Image 3">
+        <img src="practices2.png" alt="Image 3">
       </div>
       <!-- Slide 4: Image 4 -->
       <div>
