--- a/project3.html
+++ b/project3.html
@@ -110,6 +110,7 @@
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <div class="ds-image-container">
                         <img src="project 3 images/tech.png" class="img-fluid" alt="Image 1">
+                        <img src="project 3 images/register.png" class="img-fluid" alt="Image 2">
                         
                     </div>
                 </div>
@@ -124,8 +125,8 @@
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <div class="ds-code-box">
-                        <h2>Example 1: HTML and CSS</h2>
-                        <p>Here's an example of a HTML and CSS code snippet for the timeline navigation:</p>
+                        <h2>Example 1: Javascript</h2>
+                        <p>Here's an example of a Javascript code snippet for registering blog users:</p>
                         <pre><code class="html">
                          
       export const register = (req, res) => {
@@ -152,9 +153,8 @@
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <div class="ds-code-box">
-                        <h2>Example 2: HTML and CSS</h2>
-                        <p>Here's a HTML/CSS code snippet that showcases the navigation between the Oral Histories and
-                            Practices pages:</p>
+                        <h2>Example 2: Javascript</h2>
+                        <p>Here's a Javascript code snippet that demonstrates the creation of posts and backend authentifications:</p>
                         <pre><code class="HTML">
                            export const addPost = (req, res) => {
   const token = req.cookies.access_token;
